2007-10-05  Wim Taymans  <wim.taymans@gmail.com>

	* gst/rtpmanager/rtpsession.c: (rtp_session_next_timeout),
	When reconsidering RTCP timeouts, set the next timeout against the last
	report time instead of the current clock time so that we don't end up
	reconsidering forever.

2007-10-05  Wim Taymans  <wim.taymans@gmail.com>

	* gst/rtpmanager/gstrtpjitterbuffer.c:
	(gst_rtp_jitter_buffer_chain), (gst_rtp_jitter_buffer_loop):
	Only peek at the tail element instead of popping it off, which allows
	us to greatly simplify things when the tail element changes.

	* gst/rtpmanager/gstrtpsession.c:
	(gst_rtp_session_event_recv_rtp_sink):
	* gst/rtpmanager/gstrtpssrcdemux.c:
	(gst_rtp_ssrc_demux_sink_event):
	Forward FLUSH events instead of leaking them.

	* gst/rtpmanager/rtpjitterbuffer.c: (rtp_jitter_buffer_reset_skew),
	(calculate_skew), (rtp_jitter_buffer_insert):
	* gst/rtpmanager/rtpjitterbuffer.h:
	Remove the tail-changed callback in favour of a simple boolean when we
	insert a buffer in the queue.
	Add method to peek the tail of the buffer.

2007-10-05  Sebastian Dröge  <slomo@circular-chaos.org>

	Patch by: Gautier Portet <kassoulet at gmail dot com>

	* gst/xingheader/gstxingmux.c:
	The size of the Xing header is actually 417 as it's rounded to the
	next smaller integer. Fixes #397759.

	* gst/xingheader/gstxingmux.c: (xing_generate_header),
	(xing_push_header):
	Some random cleanup, add FIXMEs and TODOs and check if the newsegment
	event to the beginning was successful before pushing the header again.

2007-10-05  Sebastian Dröge  <slomo@circular-chaos.org>

	Patch by: Wai-Ming Ho <webregbox at yahoo dot co dot uk>

	* gst/mpegtsparse/mpegtspacketizer.c:
	(mpegts_packetizer_stream_new):
	Don't skip PAT with version number 0. Fixes #483400.
	* gst/mpegtsparse/mpegtsparse.c: (mpegts_parse_apply_pat):
	Make all values above 0 mark a referenced program as they can be
	incremented and only 1 had marked a referenced program before, causing