@@ -1,3 +1,9 @@
+2007-10-08  Sebastian Dröge  <slomo@circular-chaos.org>
+
+	* ext/gio/gstgio.c: (gst_gio_get_supported_protocols):
+	Use GIO function to get a list of supported URI schemes instead of
+	hard coding something.
+
 2007-10-05  Wim Taymans  <wim.taymans@gmail.com>
 
 	* gst/rtpmanager/rtpsession.c: (rtp_session_next_timeout),
